ci-config/kubernetes/webapp2.yml
kind: Deployment
apiVersion: v1
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
  - name: webapp-http
    port: 80
    targetPort: 80
  type: LoadBalancer
