ci-config/kubernetes/webapp-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-test
  labels:
    app: webapp-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-test
  template:
    metadata:
      labels:
        app: webapp-test
    spec:
      containers:
      - name: webapp-test
        image: eu.gcr.io/smartchain/webapp-test:latest
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: webapp-test
spec:
  selector:
    app: webapp-test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
